Sun Jun 30 10:58:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.h (DLN_FIND_EXTRA_ARG, DLN_FIND_EXTRA_ARG_DECL): allow extra
	  arguments to dln_find_{exe,file}_r().

	* dln_find.c (dln_find_exe_r, dln_find_file_r): add extract arguments.

	* process.c (EXPORT_STR, EXPORT_DUP): convert to default process
	  encoding if defined.

	* process.c (check_exec_env_i): convert environment variables too.

	* process.c (rb_exec_fillarg): convert program path and arguments too.

Sun Jun 30 01:57:08 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big_rshift): Use abs2twocomp and twocomp2abs_bang.

Sun Jun 30 00:14:20 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (RBIGNUM_SET_NEGATIVE_SIGN): New macro.
	  (RBIGNUM_SET_POSITIVE_SIGN): Ditto.
	  (rb_big_neg): Inline get2comp to avoid double negation.

Sat Jun 29 23:26:41 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_neg): Extracted from bary_2comp.
	  (bary_plus_one): Extracted from bary_2comp.
	  (bary_2comp): Use bary_neg and bary_plus_one.
	  (big_extend_carry): Extracted from get2comp.
	  (get2comp): Use big_extend_carry.
	  (rb_integer_unpack): Use big_extend_carry.
	  (rb_big_neg): Use bary_neg.

Sat Jun 29 22:31:59 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_2comp): Simplified.

Sat Jun 29 09:33:53 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigor_int): Return -1 if y == -1.

Sat Jun 29 09:07:16 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigor_int): Use RB_GC_GUARD.
	  (bigxor_int): Take xn and hibitsx arguments.  Use twocomp2abs_bang.
	  (rb_big_xor): Use abs2twocomp and twocomp2abs_bang.

Sat Jun 29 08:19:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigand_int): Don't apply bitwise and for BDIGIT and long.
	  (bigor_int): Take xn and hibitsx arguments.  Use twocomp2abs_bang.
	  (rb_big_or): Use abs2twocomp and twocomp2abs_bang.

Fri Jun 29 01:08:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* numeric.c (fix_mul): remove FIT_SQRT_LONG test as it was causing